--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "shubhanshu",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.3",
     "express": "^4.21.2"
   }
 }
